Add eclipse.ini changes in README.md
See #991